; ModuleID = '/home/carl/AnghaBench/linux/sound/core/seq/extr_seq_midi_event.c_reset_encode.c'
source_filename = "/home/carl/AnghaBench/linux/sound/core/seq/extr_seq_midi_event.c_reset_encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_midi_event = type { i32, i64, i64 }

@ST_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_midi_event*)* @reset_encode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_encode(%struct.snd_midi_event* %0) #0 {
  %2 = alloca %struct.snd_midi_event*, align 8
  store %struct.snd_midi_event* %0, %struct.snd_midi_event** %2, align 8
  %3 = load %struct.snd_midi_event*, %struct.snd_midi_event** %2, align 8
  %4 = getelementptr inbounds %struct.snd_midi_event, %struct.snd_midi_event* %3, i32 0, i32 2
  store i64 0, i64* %4, align 8
  %5 = load %struct.snd_midi_event*, %struct.snd_midi_event** %2, align 8
  %6 = getelementptr inbounds %struct.snd_midi_event, %struct.snd_midi_event* %5, i32 0, i32 1
  store i64 0, i64* %6, align 8
  %7 = load i32, i32* @ST_INVALID, align 4
  %8 = load %struct.snd_midi_event*, %struct.snd_midi_event** %2, align 8
  %9 = getelementptr inbounds %struct.snd_midi_event, %struct.snd_midi_event* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
